--- a/pubs-d.html
+++ b/pubs-d.html
@@ -9,7 +9,7 @@
 </li>
 <li>N. Matsuda, C. L. Griger, N. Barbalios, G. Stylianides, W. W. Cohen, & K. R. Koedinger. (2014): <a href="http://www.simstudent.org/publications/its2014a">Investigating the Effect of Meta-Cognitive Scaffolding for Learning by Teaching. </a> in <a href="http://link.springer.com/chapter/10.1007%2F978-3-319-07221-0_13">ITS-2014</a>.
 </li>
-<li>Nan Li, William W. Cohen, and Ken Koedinger (2013): <a href="http://link.springer.com/article/10.1007%2Fs40593-013-0005-5">Problem Order Implications for Learning</a> in <a href="recent.html">IJAIE</a>. <font size=-1>(Originally published as: Nan Li, William W. Cohen, and Ken Koedinger (2012): <a href="postscript/its-2012-order.pdf">Problem Order Implications for Learning Transfer</a> in <a href="recent.html">ITS-2012</a>)</font>.
+<li>Nan Li, William W. Cohen, and Ken Koedinger (2013): <a href="http://link.springer.com/article/10.1007%2Fs40593-013-0005-5">Problem Order Implications for Learning</a> in <a href="recent.html">IJAIE</a>.
 </li>
 <li>Noboru Matsuda, E. Yarzebinski, V. Keiser, R. Raizada, William W. Cohen, G. J. Stylianides, & K. R. Koedinger (2013): <a href="http://www.simstudent.org/publications/edpsych2013">Cognitive anatomy of tutor learning: Lessons learned with SimStudent. </a> in <a href="recent.html">Journal of Ed Psych, 105(4), 1152-1163. doi: 10.1037/a0031955. </a>.
 </li>
