--- a/pubs-e.html
+++ b/pubs-e.html
@@ -7,7 +7,11 @@
 </li>
 <li>William Yang Wang, Kathryn Mazaitis, Ni Lao, Tom Mitchell, and William W. Cohen (2015): <a href="postscript/mlj-2015-proppr.pdf">Efficient Inference and Learning in a Large Knowledge Base: Reasoning with Extracted Information using a Locally Groundable First-Order Probabilistic Logic</a> in <a href="http://link.springer.com/article/10.1007%2Fs10994-015-5488-x">Machine Learning, 2015</a>.
 </li>
-<li>William Yang Wang, Kathryn Mazaitis, William W. Cohen (2013): <a href="postscript/cikm-2013-proppr.pdf">Programming with Personalized PageRank: A Locally Groundable First-Order Probabilistic Logic</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/abs-1305-2254">CIKM-2013</a> <b>(Honorable Mention for Best Paper at CIKM-2013)</b>. <font size=-1>(Originally published as: William Yang Wang, Kathryn Mazaitis, William W. Cohen (2013): <a href="http://arxiv.org/abs/1305.2254">Programming with Personalized PageRank: A Locally Groundable First-Order Probabilistic Logic</a> in <a href="http://doi.acm.org/10.1145/2505515.2505573">arxiv 1305.2254</a>; William Yang Wang, Kathryn Mazaitis, William W. Cohen (2013): <i>Programming with Personalized PageRank: A Locally Groundable First-Order Probabilistic Logic</i> in <a href="recent.html">ICML 2103 Workshop on Inferning</a>)</font>.
+<li>William Yang Wang, Kathryn Mazaitis, William W. Cohen (2013): <a href="postscript/cikm-2013-proppr.pdf">Programming with Personalized PageRank: A Locally Groundable First-Order Probabilistic Logic</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/abs-1305-2254">CIKM-2013</a> <b>(Honorable Mention for Best Paper at CIKM-2013)</b>.
+</li>
+<li>William Yang Wang, Kathryn Mazaitis, William W. Cohen (2013): <a href="http://arxiv.org/abs/1305.2254">Programming with Personalized PageRank: A Locally Groundable First-Order Probabilistic Logic</a> in <a href="http://doi.acm.org/10.1145/2505515.2505573">arxiv 1305.2254</a>.
+</li>
+<li>William Yang Wang, Kathryn Mazaitis, William W. Cohen (2013): <i>Programming with Personalized PageRank: A Locally Groundable First-Order Probabilistic Logic</i> in <a href="recent.html">ICML 2103 Workshop on Inferning</a>.
 </li>
 <li>William W. Cohen, Russell Greiner, and Dale Schuurmans (1994): <i>Probabilistic hill-climbing</i> in <i>Computational learning theory and natural learning systems (Volume II), MIT Press.</i>.
 </li>
