--- a/pubs-i.html
+++ b/pubs-i.html
@@ -3,6 +3,8 @@
 </head>
 <body><h3>William W. Cohen's Papers: Inductive Logic Programming</h3>
 <ol>
+<li>William W. Cohen, Fan Yang, and Kathryn Rivard Mazaitis (2020): <a href="https://jair.org/index.php/jair/article/view/11944/26561">TensorLog: A Probabilistic Database Implemented Using Deep-Learning Infrastructure</a> in <a href="recent.html">JAIR</a>.
+</li>
 <li>William W. Cohen, Haitian Sun, Alex Hofer, Matthew Siegler  (2019): <a href="http://arxiv.org/abs/1905.10417">Differentiable Representations For Multihop Inference Rules</a> in <a href="recent.html">preparation</a>.
 </li>
 <li>William W. Cohen, Matthew Siegler, Alex Hofer (2019): <a href="http://arxiv.org/abs/1905.06209">Neural Query Language: A Knowledge Base Query Language for Tensorflow</a> in <a href="recent.html">arxiv</a>.
@@ -33,7 +35,11 @@
 </li>
 <li>William Yang Wang, Kathryn Mazaitis, and William W. Cohen (2014): <a href="postscript/cikm-2014-structure.pdf">Structure Learning via Parameter Learning</a> in <a href="http://dl.acm.org/citation.cfm?doid=2661829.2662022">CIKM-2014</a>.
 </li>
-<li>William Yang Wang, Kathryn Mazaitis, William W. Cohen (2013): <a href="postscript/cikm-2013-proppr.pdf">Programming with Personalized PageRank: A Locally Groundable First-Order Probabilistic Logic</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/abs-1305-2254">CIKM-2013</a> <b>(Honorable Mention for Best Paper at CIKM-2013)</b>. <font size=-1>(Originally published as: William Yang Wang, Kathryn Mazaitis, William W. Cohen (2013): <a href="http://arxiv.org/abs/1305.2254">Programming with Personalized PageRank: A Locally Groundable First-Order Probabilistic Logic</a> in <a href="http://doi.acm.org/10.1145/2505515.2505573">arxiv 1305.2254</a>; William Yang Wang, Kathryn Mazaitis, William W. Cohen (2013): <i>Programming with Personalized PageRank: A Locally Groundable First-Order Probabilistic Logic</i> in <a href="recent.html">ICML 2103 Workshop on Inferning</a>)</font>.
+<li>William Yang Wang, Kathryn Mazaitis, William W. Cohen (2013): <a href="postscript/cikm-2013-proppr.pdf">Programming with Personalized PageRank: A Locally Groundable First-Order Probabilistic Logic</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/abs-1305-2254">CIKM-2013</a> <b>(Honorable Mention for Best Paper at CIKM-2013)</b>.
+</li>
+<li>William Yang Wang, Kathryn Mazaitis, William W. Cohen (2013): <a href="http://arxiv.org/abs/1305.2254">Programming with Personalized PageRank: A Locally Groundable First-Order Probabilistic Logic</a> in <a href="http://doi.acm.org/10.1145/2505515.2505573">arxiv 1305.2254</a>.
+</li>
+<li>William Yang Wang, Kathryn Mazaitis, William W. Cohen (2013): <i>Programming with Personalized PageRank: A Locally Groundable First-Order Probabilistic Logic</i> in <a href="recent.html">ICML 2103 Workshop on Inferning</a>.
 </li>
 <li>Andrew Arnold and William W. Cohen (2009): <a href="postscript/snas-2009.pdf">Information Extraction as Link Prediction: Using Curated Citation Networks to Improve Gene Detection</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/wasa/wasa2009.html#ArnoldC09">WASA-2009</a>.
 </li>
@@ -53,9 +59,11 @@
 </li>
 <li>Noboru Matsuda, William Cohen & Ken Koedinger (2005): <a href="postscript/aaai-ws-2005.pdf">Applying Programming by Demonstration in an Intelligent Authoring Tool for Cognitive Tutors</a> in <a href="recent.html">AAAI Workshop on Human Comprehensible Machine Learning</a>.
 </li>
-<li>William W. Cohen & Prem Devanbu (2000): <i>Automatically Exploring	Hypotheses about Fault Prediction: a Comparative Study of Inductive Logic Programming Methods</i> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/ijseke/ijseke9.html#CohenD99">International Journal of Software Engineering and Knowledge Engineering 9(5): 519-546 (1999)</a>. <font size=-1>(Originally published as: William W. Cohen and Prem Devanbu (1997): <a href="postscript/ml-97-faults.ps">A Comparative Study of Inductive Logic Programming Methods for Software Fault Prediction</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/icml/icml1997.html#CohenD97">ICML 1997: 66-74</a>)</font>.
+<li>William W. Cohen & Prem Devanbu (2000): <i>Automatically Exploring	Hypotheses about Fault Prediction: a Comparative Study of Inductive Logic Programming Methods</i> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/ijseke/ijseke9.html#CohenD99">International Journal of Software Engineering and Knowledge Engineering 9(5): 519-546 (1999)</a>.
 </li>
-<li>William W. Cohen (1998): <i>Hardness Results for Learning First-Order Representations and Programming by Demonstration</i> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/ml/ml30.html#Cohen98">Machine Learning 30(1): 57-87 (1998)</a>. <font size=-1>(Originally published as: William W. Cohen (1996): <a href="postscript/colt-96.ps">The Dual DFA Learning Problem: Hardness Results for Programming by Demonstration and Learning First-Order Representations (Extended Abstract)</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/colt/colt1996.html#Cohen96">COLT 1996: 29-40</a>)</font>.
+<li>William W. Cohen (1998): <i>Hardness Results for Learning First-Order Representations and Programming by Demonstration</i> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/ml/ml30.html#Cohen98">Machine Learning 30(1): 57-87 (1998)</a>.
+</li>
+<li>William W. Cohen and Prem Devanbu (1997): <a href="postscript/ml-97-faults.ps">A Comparative Study of Inductive Logic Programming Methods for Software Fault Prediction</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/icml/icml1997.html#CohenD97">ICML 1997: 66-74</a>.
 </li>
 <li>William W. Cohen (1995): <i>Pac-learning non-recursive prolog clauses</i> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/ai/ai79.html#Cohen95">Artif. Intell. 79(1): 1-38 (1995)</a>.
 </li>
@@ -71,6 +79,8 @@
 </li>
 <li>William W. Cohen (1994): <i>Pac-learning nondeterminate Clauses</i> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/aaai/aaai94-1.html#Cohen94a">AAAI 1994: 676-681</a>.
 </li>
+<li>William W. Cohen (1994): <a href="postscript/aaai-94-rc.ps">Recovering Software Specifications with Inductive Logic Programming</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/aaai/aaai94-1.html#Cohen94">AAAI 1994: 142-148</a>.
+</li>
 <li>William W. Cohen (1994): <a href="postscript/aij-grendel.pdf">Grammatically biased learning: learning logic programs using an explicit antecedent description language</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/ai/ai68.html#Cohen94a">Artif. Intell. 68(2): 303-366 (1994)</a>.
 </li>
 <li>William W. Cohen (1993): <a href="postscript/aaai-93-cryptlim.ps">Cryptographic limitations on learning one-clause logic programs</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/aaai/aaai93.html#Cohen93">AAAI 1993: 80-85</a>.
@@ -78,6 +88,8 @@
 <li>William W. Cohen (1993): <a href="postscript/ijcai-ws-93.ps">Rapid prototyping of ILP systems using explicit bias</a> in <i>Proc. of the 1993 IJCAI Workshop on Inductive Logic Programming</i>.
 </li>
 <li>William W. Cohen (1993): <a href="postscript/aaai-93-force2.ps">Pac-learning a restricted class of recursive logic programs</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/aaai/aaai93.html#Cohen93a">AAAI 1993: 86-92</a>.
+</li>
+<li>William W. Cohen and Haym Hirsh (1992): <i>Learnability of Description Logics</i> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/colt/colt1992.html#CohenH92">COLT 1992: 116-127</a>.
 </li>
 <li>William W. Cohen (1992): <a href="postscript/ml-92.ps">Compiling prior knowledge into an explicit bias</a> in <i>ICML 1992: 102-110</i>.
 </li>
