--- a/pubs-r.html
+++ b/pubs-r.html
@@ -9,11 +9,15 @@
 </li>
 <li>William Yang Wang, Kathryn Mazaitis, and William W. Cohen (2014): <a href="postscript/cikm-2014-structure.pdf">Structure Learning via Parameter Learning</a> in <a href="http://dl.acm.org/citation.cfm?doid=2661829.2662022">CIKM-2014</a>.
 </li>
-<li>William W. Cohen, Matthew Hurst & Lee S. Jensen (2003): <a href="postscript/ws-chap-2002.pdf">A Flexible Learning System for Wrapping Tables and Lists in HTML Documents</a> in <i>Web Document Analysis: Challenges and Opportunities, ed. Antonacopoulos & Hu, Word Scientific Publishing</i>. <font size=-1>(Originally published as: William W. Cohen, Matthew Hurst & Lee S. Jensen (2002): <a href="http://www2002.org/CDROM/refereed/355/index.html">A Flexible Learning System for Wrapping Tables and Lists in HTML Documents</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/www/www2002.html#CohenHJ02">WWW 2002: 232-241</a>; Lee S. Jensen & William W. Cohen (2001): <i>A Structured Wrapper Induction System for Extracting Information from Semi-Structured Documents</i> in <i>Proc. of the IJCAI-2001 Workshop on Adaptive Text Extraction and Mining</i>)</font>.
+<li>William W. Cohen, Matthew Hurst & Lee S. Jensen (2003): <a href="postscript/ws-chap-2002.pdf">A Flexible Learning System for Wrapping Tables and Lists in HTML Documents</a> in <i>Web Document Analysis: Challenges and Opportunities, ed. Antonacopoulos & Hu, Word Scientific Publishing</i>.
+</li>
+<li>William W. Cohen, Matthew Hurst & Lee S. Jensen (2002): <a href="http://www2002.org/CDROM/refereed/355/index.html">A Flexible Learning System for Wrapping Tables and Lists in HTML Documents</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/www/www2002.html#CohenHJ02">WWW 2002: 232-241</a>.
 </li>
 <li>William W. Cohen and Yoram Singer (1999): <a href="postscript/aaai-99-slipper.ps">Simple, Fast, and Effective Rule Learner</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/aaai/aaai99.html#CohenS99">AAAI/IAAI 1999: 335-342</a>.
 </li>
-<li>William W. Cohen & Yoram Singer (1999): <a href="postscript/tois-sigir.pdf">Context-sensitive learning methods for text categorization</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/tois/tois17.html#CohenS99">ACM Trans. Inf. Syst. 17(2): 141-173 (1999)</a>. <font size=-1>(Originally published as: William W. Cohen and Yoram Singer (1996): <a href="postscript/sigir-96.ps">Context-sensitive learning methods for text categorization</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/sigir/sigir96.html#CohenS96">SIGIR 1996: 307-315</a>)</font>.
+<li>William W. Cohen & Yoram Singer (1999): <a href="postscript/tois-sigir.pdf">Context-sensitive learning methods for text categorization</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/tois/tois17.html#CohenS99">ACM Trans. Inf. Syst. 17(2): 141-173 (1999)</a>.
+</li>
+<li>Chumki Basu, Haym Hirsh, William W. Cohen (1998): <a href="postscript/aaai-98-collab.ps">Recommendation as Classification: Using Social and Content-Based Information in Recommendation.</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/aaai/aaai98.html#BasuHC98">AAAI/IAAI 1998: 714-720</a>.
 </li>
 <li>William W. Cohen and Daniel Kudenko (1997): <a href="postscript/aaai-97-transfer.ps">Transferring and Retraining Learned Information Filters</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/aaai/aaai97.html#CohenK97">AAAI/IAAI 1997: 583-590</a>.
 </li>
@@ -22,6 +26,8 @@
 <li>William W. Cohen (1996): <a href="postscript/aaai-ss-96.ps">Learning Rules that Classify E-Mail</a> in <i>AAAI Spring Symposium on ML and IR 1996</i>.
 </li>
 <li>William W. Cohen and Yoram Singer (1996): <a href="postscript/aaai-ws-96.ps">Learning to Query the Web</a> in <i>AAAI Workshop on Internet-Based Information Access Systems 1996</i>.
+</li>
+<li>William W. Cohen and Yoram Singer (1996): <a href="postscript/sigir-96.ps">Context-sensitive learning methods for text categorization</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/sigir/sigir96.html#CohenS96">SIGIR 1996: 307-315</a>.
 </li>
 <li>William W. Cohen (1995): <a href="postscript/ml-95-ripper.ps">Fast effective rule induction</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/icml/icml1995.html#Cohen95">ICML 1995: 115-123</a>.
 </li>
