--- a/pubs-s.html
+++ b/pubs-s.html
@@ -4,7 +4,9 @@
 <body><h3>Selected and/or recent papers by William W. Cohen</h3>
 <h3>Recent papers: 2020</h3>
 <ol>
-<li>William W. Cohen, Haitian Sun, R. Alex Hofer, Matthew Siegler (2020): <a href="https://openreview.net/forum?id=BJlguT4YPr">Scalable Neural Methods for Reasoning With a Symbolic Knowledge Base </a> in <a href="recent.html">ICLR-2020</a>.
+<li>William W. Cohen, Fan Yang, and Kathryn Rivard Mazaitis (2020): <a href="https://jair.org/index.php/jair/article/view/11944/26561">TensorLog: A Probabilistic Database Implemented Using Deep-Learning Infrastructure</a> in <a href="recent.html">JAIR</a>.
+</li>
+<li>William W. Cohen, Haitian Sun, R. Alex Hofer, Matthew Siegler (2020): <a href="https://arxiv.org/abs/2002.06115">Scalable Neural Methods for Reasoning With a Symbolic Knowledge Base </a> in <a href="recent.html">ICLR-2020</a>.
 </li>
 <li>Bhuwan Dhingra, Manzil Zaheer, Vidhisha Balachandran, Graham Neubig, Ruslan Salakhutdinov, William W. Cohen (2020): <a href="https://openreview.net/forum?id=SJxstlHFPH">Differentiable Reasoning over a Virtual Knowledge Base</a> in <a href="recent.html">ICLR-2020</a>.
 </li>
@@ -14,6 +16,8 @@
 <h3>Recent papers: 2019</h3>
 <ol>
 <li>Andrew O. Arnold, William W. Cohen (2019): <a href="https://arxiv.org/abs/1911.06111">Instance-based Transfer Learning for Multilingual Deep Retrieval</a> in <a href="recent.html">preparation</a>.
+</li>
+<li>Qiao Jin, Bhuwan Dhingra, Zhengping Liu, William W Cohen, and Xinghua Lu (2019): <a href="https://arxiv.org/pdf/1909.06146.pdf">PubMedQA: A Dataset for Biomedical Research Question Answering</a> in <a href="recent.html">EMNLP-2019</a>.
 </li>
 <li>Bhuwan Dhingra, Manaal Faruqui, Ankur Parikh, Ming-Wei Chang, Dipanjan Das, William W. Cohen (2019): <a href="http://arxiv.org/abs/1906.01081">Handling Divergent Reference Texts when Evaluating Table-to-Text Generation</a> in <a href="recent.html">ACL-2019</a>.
 </li>
@@ -79,7 +83,7 @@
 </li>
 <li>William Yang Wang, Kathryn Mazaitis, and William W. Cohen (2014): <a href="postscript/cikm-2014-structure.pdf">Structure Learning via Parameter Learning</a> in <a href="http://dl.acm.org/citation.cfm?doid=2661829.2662022">CIKM-2014</a>.
 </li>
-<li>William Yang Wang, Kathryn Mazaitis, William W. Cohen (2013): <a href="postscript/cikm-2013-proppr.pdf">Programming with Personalized PageRank: A Locally Groundable First-Order Probabilistic Logic</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/abs-1305-2254">CIKM-2013</a> <b>(Honorable Mention for Best Paper at CIKM-2013)</b>. <font size=-1>(Originally published as: William Yang Wang, Kathryn Mazaitis, William W. Cohen (2013): <a href="http://arxiv.org/abs/1305.2254">Programming with Personalized PageRank: A Locally Groundable First-Order Probabilistic Logic</a> in <a href="http://doi.acm.org/10.1145/2505515.2505573">arxiv 1305.2254</a>; William Yang Wang, Kathryn Mazaitis, William W. Cohen (2013): <i>Programming with Personalized PageRank: A Locally Groundable First-Order Probabilistic Logic</i> in <a href="recent.html">ICML 2103 Workshop on Inferning</a>)</font>.
+<li>William Yang Wang, Kathryn Mazaitis, William W. Cohen (2013): <a href="postscript/cikm-2013-proppr.pdf">Programming with Personalized PageRank: A Locally Groundable First-Order Probabilistic Logic</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/abs-1305-2254">CIKM-2013</a> <b>(Honorable Mention for Best Paper at CIKM-2013)</b>.
 </li>
 <li>Jay Pujara, Hui Miao, Lise Getoor, and William W. Cohen (2013): <a href="postscript/iswc-2013.pdf">Knowledge Graph Identification</a> in <a href="http://dx.doi.org/10.1007/978-3-642-41335-3_34">ISWC-2013</a> <b>(Best Student Paper at ISWC-2013)</b>.
 </li>
@@ -157,25 +161,31 @@
 </li>
 <li>Cheng Zhai, William W. Cohen & John Lafferty (2003): <a href="postscript/sigir-2003.pdf">Beyond Independent Topical Relevance: Methods and Evaluation Metrics for Subtopic Retrieval</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/sigir/sigir2003.html#ZhaiCL03">SIGIR 2003: 10-17</a> <b>(Won Ten-Year "Test of Time" Award at SIGIR 2014)</b>.
 </li>
-<li>William W. Cohen, Matthew Hurst & Lee S. Jensen (2003): <a href="postscript/ws-chap-2002.pdf">A Flexible Learning System for Wrapping Tables and Lists in HTML Documents</a> in <i>Web Document Analysis: Challenges and Opportunities, ed. Antonacopoulos & Hu, Word Scientific Publishing</i>. <font size=-1>(Originally published as: William W. Cohen, Matthew Hurst & Lee S. Jensen (2002): <a href="http://www2002.org/CDROM/refereed/355/index.html">A Flexible Learning System for Wrapping Tables and Lists in HTML Documents</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/www/www2002.html#CohenHJ02">WWW 2002: 232-241</a>; Lee S. Jensen & William W. Cohen (2001): <i>A Structured Wrapper Induction System for Extracting Information from Semi-Structured Documents</i> in <i>Proc. of the IJCAI-2001 Workshop on Adaptive Text Extraction and Mining</i>)</font>.
+<li>William W. Cohen, Matthew Hurst & Lee S. Jensen (2003): <a href="postscript/ws-chap-2002.pdf">A Flexible Learning System for Wrapping Tables and Lists in HTML Documents</a> in <i>Web Document Analysis: Challenges and Opportunities, ed. Antonacopoulos & Hu, Word Scientific Publishing</i>.
 </li>
-<li>Chumki Basu, Haym Hirsh, William W. Cohen & Craig Neville-Manning (2001): <a href="http://www.cs.washington.edu/research/jair/abstracts/basu01a.html">Technical Paper Recommendation: A Study in Combining Multiple Information Sources</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/jair/jair14.html#BasuHCN01">J. Artif. Intell. Res. (JAIR) 14: 231-252 (2001)</a>. <font size=-1>(Originally published as: Chumki Basu, Haym Hirsh, William W. Cohen (1998): <a href="postscript/aaai-98-collab.ps">Recommendation as Classification: Using Social and Content-Based Information in Recommendation.</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/aaai/aaai98.html#BasuHC98">AAAI/IAAI 1998: 714-720</a>)</font>.
+<li>Chumki Basu, Haym Hirsh, William W. Cohen & Craig Neville-Manning (2001): <a href="http://www.cs.washington.edu/research/jair/abstracts/basu01a.html">Technical Paper Recommendation: A Study in Combining Multiple Information Sources</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/jair/jair14.html#BasuHCN01">J. Artif. Intell. Res. (JAIR) 14: 231-252 (2001)</a>.
 </li>
 <li>William W. Cohen, David McAllester, and Henry Kautz (2000): <a href="postscript/kdd-2000.ps">Hardening Soft Information Sources</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/kdd/kdd2000.html#CohenKM00">KDD 2000: 255-259</a>.
 </li>
 <li>William W. Cohen (2000): <a href="postscript/ml-2000.ps">Automatically extracting features for concept learning from the Web</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/icml/icml2000.html#Cohen00">ICML 2000: 159-166</a>.
 </li>
-<li>William W. Cohen and Wei Fan (2000): <a href="http://www9.org/w9cdrom/266/266.html">Web-Collaborative Filtering: Recommending Music by Crawling The Web</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/cn/cn33.html#CohenF00">Computer Networks 33(1-6): 685-698 (2000)</a>. <font size=-1>(Originally published as: William W. Cohen and Wei Fan (2000): <a href="http://www9.org/w9cdrom/266/266.html">Web-Collaborative Filtering: Recommending Music by Crawling The Web</a> in <i>WWW 2000</i>)</font>.
+<li>William W. Cohen and Wei Fan (2000): <a href="http://www9.org/w9cdrom/266/266.html">Web-Collaborative Filtering: Recommending Music by Crawling The Web</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/cn/cn33.html#CohenF00">Computer Networks 33(1-6): 685-698 (2000)</a>.
 </li>
-<li>William W. Cohen (2000): <a href="postscript/tois-whirl.pdf">Data Integration using Similarity Joins and a Word-based Information Representation Language</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/tois/tois18.html#Cohen00">ACM Trans. Inf. Syst. 18(3): 288-321 (2000)</a>. <font size=-1>(Originally published as: William W. Cohen (1998): <a href="postscript/sigmod-98.ps">Integration of Heterogeneous Databases Without Common Domains Using Queries Based on Textual Similarity</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/sigmod/sigmod98.html#Cohen98">SIGMOD Conference 1998: 201-212</a> <b>(Won Ten-Year "Test of Time" Award at SIGMOD 2008)</b>; William W. Cohen (1997): <a href="postscript/sigir-ws-97.ps">Knowledge Integration for Structured Information Sources Containing Text (Extended Abstract)</a> in <i>SIGIR Workshop on Networked IR (informal proceedings)</i>)</font>.
+<li>William W. Cohen and Wei Fan (2000): <a href="http://www9.org/w9cdrom/266/266.html">Web-Collaborative Filtering: Recommending Music by Crawling The Web</a> in <i>WWW 2000</i>.
+</li>
+<li>William W. Cohen (2000): <a href="postscript/tois-whirl.pdf">Data Integration using Similarity Joins and a Word-based Information Representation Language</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/tois/tois18.html#Cohen00">ACM Trans. Inf. Syst. 18(3): 288-321 (2000)</a>.
 </li>
 <li>William W. Cohen and Yoram Singer (1999): <a href="postscript/aaai-99-slipper.ps">Simple, Fast, and Effective Rule Learner</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/aaai/aaai99.html#CohenS99">AAAI/IAAI 1999: 335-342</a>.
 </li>
-<li>William W. Cohen, Rob Schapire, Yoram Singer (1999): <a href="http://www.jair.org/abstracts/cohen99a.html">Learning to Order Things</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/jair/jair10.html#CohenSS99">J. Artif. Intell. Res. (JAIR) 10: 243-270 (1999)</a>. <font size=-1>(Originally published as: William W. Cohen, Robert E. Schapire, Yoram Singer (1997): <i>Learning to Order Things</i> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/nips/nips1997.html#CohenSS97">NIPS 1997</a>)</font>.
+<li>William W. Cohen, Rob Schapire, Yoram Singer (1999): <a href="http://www.jair.org/abstracts/cohen99a.html">Learning to Order Things</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/jair/jair10.html#CohenSS99">J. Artif. Intell. Res. (JAIR) 10: 243-270 (1999)</a>.
 </li>
 <li>William W. Cohen (1996): <a href="postscript/aaai-96.ps">Learning Trees and Rules with Set-valued Features</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/aaai/aaai96-1.html#Cohen96"> AAAI/IAAI, Vol. 1 1996: 709-716</a>.
 </li>
+<li>William W. Cohen (1996): <a href="postscript/colt-96.ps">The Dual DFA Learning Problem: Hardness Results for Programming by Demonstration and Learning First-Order Representations (Extended Abstract)</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/colt/colt1996.html#Cohen96">COLT 1996: 29-40</a>.
+</li>
 <li>William W. Cohen (1996): <a href="postscript/aaai-ss-96.ps">Learning Rules that Classify E-Mail</a> in <i>AAAI Spring Symposium on ML and IR 1996</i>.
+</li>
+<li>William W. Cohen and Yoram Singer (1996): <a href="postscript/sigir-96.ps">Context-sensitive learning methods for text categorization</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/sigir/sigir96.html#CohenS96">SIGIR 1996: 307-315</a>.
 </li>
 <li>William W. Cohen (1995): <a href="postscript/ml-95-ripper.ps">Fast effective rule induction</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/icml/icml1995.html#Cohen95">ICML 1995: 115-123</a>.
 </li>
