--- a/pubs-t.html
+++ b/pubs-t.html
@@ -61,9 +61,9 @@
 </li>
 <li>William W. Cohen (2000): <a href="postscript/ml-2000.ps">Automatically extracting features for concept learning from the Web</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/icml/icml2000.html#Cohen00">ICML 2000: 159-166</a>.
 </li>
-<li>William W. Cohen, Rob Schapire, Yoram Singer (1999): <a href="http://www.jair.org/abstracts/cohen99a.html">Learning to Order Things</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/jair/jair10.html#CohenSS99">J. Artif. Intell. Res. (JAIR) 10: 243-270 (1999)</a>. <font size=-1>(Originally published as: William W. Cohen, Robert E. Schapire, Yoram Singer (1997): <i>Learning to Order Things</i> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/nips/nips1997.html#CohenSS97">NIPS 1997</a>)</font>.
+<li>William W. Cohen, Rob Schapire, Yoram Singer (1999): <a href="http://www.jair.org/abstracts/cohen99a.html">Learning to Order Things</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/jair/jair10.html#CohenSS99">J. Artif. Intell. Res. (JAIR) 10: 243-270 (1999)</a>.
 </li>
-<li>William W. Cohen & Yoram Singer (1999): <a href="postscript/tois-sigir.pdf">Context-sensitive learning methods for text categorization</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/tois/tois17.html#CohenS99">ACM Trans. Inf. Syst. 17(2): 141-173 (1999)</a>. <font size=-1>(Originally published as: William W. Cohen and Yoram Singer (1996): <a href="postscript/sigir-96.ps">Context-sensitive learning methods for text categorization</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/sigir/sigir96.html#CohenS96">SIGIR 1996: 307-315</a>)</font>.
+<li>William W. Cohen & Yoram Singer (1999): <a href="postscript/tois-sigir.pdf">Context-sensitive learning methods for text categorization</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/tois/tois17.html#CohenS99">ACM Trans. Inf. Syst. 17(2): 141-173 (1999)</a>.
 </li>
 <li>William W. Cohen & Haym Hirsh (1998): <a href="postscript/kdd-98.ps">Joins that Generalize: Text Classification Using WHIRL</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/kdd/kdd98.html#CohenH98">KDD 1998: 169-173</a>.
 </li>
@@ -74,6 +74,8 @@
 <li>William W. Cohen (1996): <a href="postscript/aaai-ss-96.ps">Learning Rules that Classify E-Mail</a> in <i>AAAI Spring Symposium on ML and IR 1996</i>.
 </li>
 <li>William W. Cohen and Yoram Singer (1996): <a href="postscript/aaai-ws-96.ps">Learning to Query the Web</a> in <i>AAAI Workshop on Internet-Based Information Access Systems 1996</i>.
+</li>
+<li>William W. Cohen and Yoram Singer (1996): <a href="postscript/sigir-96.ps">Context-sensitive learning methods for text categorization</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/sigir/sigir96.html#CohenS96">SIGIR 1996: 307-315</a>.
 </li>
 <li>William W. Cohen (1995): <a href="postscript/ilp-95.ps">Learning to Classify English Text with ILP Methods</a> in <i>Advances in ILP, ed. L. de Readt, IOS Press</i>.
 </li>
