--- a/pubs-x.html
+++ b/pubs-x.html
@@ -3,7 +3,7 @@
 </head>
 <body><h3>William W. Cohen's Papers: Info Extraction/Reading</h3>
 <ol>
-<li>William W. Cohen, Haitian Sun, R. Alex Hofer, Matthew Siegler (2020): <a href="https://openreview.net/forum?id=BJlguT4YPr">Scalable Neural Methods for Reasoning With a Symbolic Knowledge Base </a> in <a href="recent.html">ICLR-2020</a>.
+<li>William W. Cohen, Haitian Sun, R. Alex Hofer, Matthew Siegler (2020): <a href="https://arxiv.org/abs/2002.06115">Scalable Neural Methods for Reasoning With a Symbolic Knowledge Base </a> in <a href="recent.html">ICLR-2020</a>.
 </li>
 <li>Bhuwan Dhingra, Manzil Zaheer, Vidhisha Balachandran, Graham Neubig, Ruslan Salakhutdinov, William W. Cohen (2020): <a href="https://openreview.net/forum?id=SJxstlHFPH">Differentiable Reasoning over a Virtual Knowledge Base</a> in <a href="recent.html">ICLR-2020</a>.
 </li>
@@ -157,7 +157,9 @@
 </li>
 <li>William W. Cohen (2002): <a href="postscript/nips-2002.pdf">Improving A Page Classifier with Anchor Extraction and Link Analysis</a> in <i>NIPS 2002</i>.
 </li>
-<li>William W. Cohen, Matthew Hurst & Lee S. Jensen (2003): <a href="postscript/ws-chap-2002.pdf">A Flexible Learning System for Wrapping Tables and Lists in HTML Documents</a> in <i>Web Document Analysis: Challenges and Opportunities, ed. Antonacopoulos & Hu, Word Scientific Publishing</i>. <font size=-1>(Originally published as: William W. Cohen, Matthew Hurst & Lee S. Jensen (2002): <a href="http://www2002.org/CDROM/refereed/355/index.html">A Flexible Learning System for Wrapping Tables and Lists in HTML Documents</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/www/www2002.html#CohenHJ02">WWW 2002: 232-241</a>; Lee S. Jensen & William W. Cohen (2001): <i>A Structured Wrapper Induction System for Extracting Information from Semi-Structured Documents</i> in <i>Proc. of the IJCAI-2001 Workshop on Adaptive Text Extraction and Mining</i>)</font>.
+<li>William W. Cohen, Matthew Hurst & Lee S. Jensen (2003): <a href="postscript/ws-chap-2002.pdf">A Flexible Learning System for Wrapping Tables and Lists in HTML Documents</a> in <i>Web Document Analysis: Challenges and Opportunities, ed. Antonacopoulos & Hu, Word Scientific Publishing</i>.
+</li>
+<li>William W. Cohen, Matthew Hurst & Lee S. Jensen (2002): <a href="http://www2002.org/CDROM/refereed/355/index.html">A Flexible Learning System for Wrapping Tables and Lists in HTML Documents</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/www/www2002.html#CohenHJ02">WWW 2002: 232-241</a>.
 </li>
 <li>William W. Cohen (2001): <i>Issues in Extracting Information from the Web (Extended Abstract)</i> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/iwpt/iwpt2001.html#Cohen01">IWPT 2001</a>.
 </li>
@@ -165,7 +167,9 @@
 </li>
 <li>William W. Cohen, Andrew McCallum, Dallan Quass (2000): <a href="http://www.research.microsoft.com/research/db/debull/A00sept/cohen.ps">Learning to Understand the Web</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/debu/debu23.html#CohenMQ00">IEEE Data Eng. Bull. 23(3): 17-24 (2000)</a>.
 </li>
-<li>William W. Cohen and Wei Fan (1999): <a href="http://www8.org/w8-papers/5a-search-query/learning/index.html">Learning Page-Independent Heuristics for Extracting Data from Web Pages</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/cn/cn31.html#CohenF99">Computer Networks 31(11-16): 1641-1652 (1999)</a>. <font size=-1>(Originally published as: William W. Cohen and Wei Fan (1999): <a href="http://www8.org/w8-papers/5a-search-query/learning/index.html">Learning Page-Independent Heuristics for Extracting Data from Web Pages</a> in <i>WWW 1999</i>)</font>.
+<li>William W. Cohen and Wei Fan (1999): <a href="http://www8.org/w8-papers/5a-search-query/learning/index.html">Learning Page-Independent Heuristics for Extracting Data from Web Pages</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/cn/cn31.html#CohenF99">Computer Networks 31(11-16): 1641-1652 (1999)</a>.
+</li>
+<li>William W. Cohen and Wei Fan (1999): <a href="http://www8.org/w8-papers/5a-search-query/learning/index.html">Learning Page-Independent Heuristics for Extracting Data from Web Pages</a> in <i>WWW 1999</i>.
 </li>
 <li>William W. Cohen (1999): <a href="postscript/jnl-agents.ps.gz">Reasoning about Textual Similarity in a Web-Based Information Access</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/aamas/aamas2.html#Cohen99">Autonomous Agents and Multi-Agent Systems 2(1): 65-86 (1999)</a>.
 </li>
