--- a/pubs-a.html
+++ b/pubs-a.html
@@ -5,7 +5,7 @@
 <ol>
 <li>Yifeng Tao, Chunhui Cai, William W. Cohen, Xinghua Lu (2020): <a href="postscript/psb-2020.pdf">From genome to phenome: Predicting multiple cancer phenotypes based on somatic genomic alternations bia the genomic impact transformer</a> in <a href="recent.html">PSB-2020</a>.
 </li>
-<li>Qiao Jin, Bhuwan Dhingra, Zhengping Liu, William W Cohen, and Xinghua Lu (2019): <a href="https://arxiv.org/pdf/1909.06146.pdf">PubMedQA: A Dataset for Biomedical Research Question Answering</a> in <a href="recent.html">preparation</a>.
+<li>Qiao Jin, Bhuwan Dhingra, Zhengping Liu, William W Cohen, and Xinghua Lu (2019): <a href="https://arxiv.org/pdf/1909.06146.pdf">PubMedQA: A Dataset for Biomedical Research Question Answering</a> in <a href="recent.html">EMNLP-2019</a>.
 </li>
 <li>Qiao Jin, Bhuwan Dhingra, William W. Cohen, Xinghua Lu (2019): <a href="http://arxiv.org/abs/1904.02181">Probing Biomedical Embeddings from Language Models</a> in <a href="recent.html">preparation</a>.
 </li>
@@ -191,15 +191,21 @@
 </li>
 <li>William W. Cohen (2002): <a href="postscript/nips-2002.pdf">Improving A Page Classifier with Anchor Extraction and Link Analysis</a> in <i>NIPS 2002</i>.
 </li>
-<li>William W. Cohen, Matthew Hurst & Lee S. Jensen (2003): <a href="postscript/ws-chap-2002.pdf">A Flexible Learning System for Wrapping Tables and Lists in HTML Documents</a> in <i>Web Document Analysis: Challenges and Opportunities, ed. Antonacopoulos & Hu, Word Scientific Publishing</i>. <font size=-1>(Originally published as: William W. Cohen, Matthew Hurst & Lee S. Jensen (2002): <a href="http://www2002.org/CDROM/refereed/355/index.html">A Flexible Learning System for Wrapping Tables and Lists in HTML Documents</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/www/www2002.html#CohenHJ02">WWW 2002: 232-241</a>; Lee S. Jensen & William W. Cohen (2001): <i>A Structured Wrapper Induction System for Extracting Information from Semi-Structured Documents</i> in <i>Proc. of the IJCAI-2001 Workshop on Adaptive Text Extraction and Mining</i>)</font>.
+<li>William W. Cohen, Matthew Hurst & Lee S. Jensen (2003): <a href="postscript/ws-chap-2002.pdf">A Flexible Learning System for Wrapping Tables and Lists in HTML Documents</a> in <i>Web Document Analysis: Challenges and Opportunities, ed. Antonacopoulos & Hu, Word Scientific Publishing</i>.
+</li>
+<li>William W. Cohen, Matthew Hurst & Lee S. Jensen (2002): <a href="http://www2002.org/CDROM/refereed/355/index.html">A Flexible Learning System for Wrapping Tables and Lists in HTML Documents</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/www/www2002.html#CohenHJ02">WWW 2002: 232-241</a>.
 </li>
 <li>Lee S. Jensen & William W. Cohen (2001): <a href="postscript/IJCAI_Workshop_-_Wrapster_Associations.htm">Grouping Extracted Fields</a> in <i>Proc. of the IJCAI-2001 Workshop on Adaptive Text Extraction and Mining</i>.
+</li>
+<li>Lee S. Jensen & William W. Cohen (2001): <i>A Structured Wrapper Induction System for Extracting Information from Semi-Structured Documents</i> in <i>Proc. of the IJCAI-2001 Workshop on Adaptive Text Extraction and Mining</i>.
 </li>
 <li>William W. Cohen (2001): <i>Issues in Extracting Information from the Web (Extended Abstract)</i> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/iwpt/iwpt2001.html#Cohen01">IWPT 2001</a>.
 </li>
 <li>William W. Cohen (1999): <i>What Can We Learn from the Web</i> in <i>ICML 1999</i>.
 </li>
-<li>William W. Cohen & Prem Devanbu (2000): <i>Automatically Exploring	Hypotheses about Fault Prediction: a Comparative Study of Inductive Logic Programming Methods</i> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/ijseke/ijseke9.html#CohenD99">International Journal of Software Engineering and Knowledge Engineering 9(5): 519-546 (1999)</a>. <font size=-1>(Originally published as: William W. Cohen and Prem Devanbu (1997): <a href="postscript/ml-97-faults.ps">A Comparative Study of Inductive Logic Programming Methods for Software Fault Prediction</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/icml/icml1997.html#CohenD97">ICML 1997: 66-74</a>)</font>.
+<li>William W. Cohen & Prem Devanbu (2000): <i>Automatically Exploring	Hypotheses about Fault Prediction: a Comparative Study of Inductive Logic Programming Methods</i> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/ijseke/ijseke9.html#CohenD99">International Journal of Software Engineering and Knowledge Engineering 9(5): 519-546 (1999)</a>.
+</li>
+<li>William W. Cohen and Prem Devanbu (1997): <a href="postscript/ml-97-faults.ps">A Comparative Study of Inductive Logic Programming Methods for Software Fault Prediction</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/icml/icml1997.html#CohenD97">ICML 1997: 66-74</a>.
 </li>
 <li>William W. Cohen and Daniel Kudenko (1997): <a href="postscript/aaai-97-transfer.ps">Transferring and Retraining Learned Information Filters</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/aaai/aaai97.html#CohenK97">AAAI/IAAI 1997: 583-590</a>.
 </li>
@@ -207,7 +213,9 @@
 </li>
 <li>William W. Cohen and Yoram Singer (1996): <a href="postscript/aaai-ws-96.ps">Learning to Query the Web</a> in <i>AAAI Workshop on Internet-Based Information Access Systems 1996</i>.
 </li>
-<li>William W. Cohen (1995): <i>Inductive Specification Recovery: Understanding Software by Learning from Example Behaviors</i> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/ase/ase2.html#Cohen95">Autom. Softw. Eng. 2(2): 107-129 (1995)</a>. <font size=-1>(Originally published as: William W. Cohen (1994): <a href="postscript/aaai-94-rc.ps">Recovering Software Specifications with Inductive Logic Programming</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/aaai/aaai94-1.html#Cohen94">AAAI 1994: 142-148</a>)</font>.
+<li>William W. Cohen (1995): <i>Inductive Specification Recovery: Understanding Software by Learning from Example Behaviors</i> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/ase/ase2.html#Cohen95">Autom. Softw. Eng. 2(2): 107-129 (1995)</a>.
+</li>
+<li>William W. Cohen (1994): <a href="postscript/aaai-94-rc.ps">Recovering Software Specifications with Inductive Logic Programming</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/aaai/aaai94-1.html#Cohen94">AAAI 1994: 142-148</a>.
 </li>
 <li>G. Miller, D. Rosenthal, W. Cohen, and M. Johnston (1987): <i>Expert systems tools for hubble space telescope scheduling</i> in <i>Proc. of the Goddard Conference on Space Applications of Artificial Intelligence and Robotics</i>.
 </li>
