--- a/pubs-f.html
+++ b/pubs-f.html
@@ -5,11 +5,15 @@
 <ol>
 <li>William Cohen (2009): <a href="http://reports-archive.adm.cs.cmu.edu/anon/ml2010/CMU-ML-10-102.pdf">Graph Walks and Graphical Models</a> in <a href="recent.html">SCS Technical Report Collection</a>.
 </li>
-<li>William W. Cohen, Matthew Hurst & Lee S. Jensen (2003): <a href="postscript/ws-chap-2002.pdf">A Flexible Learning System for Wrapping Tables and Lists in HTML Documents</a> in <i>Web Document Analysis: Challenges and Opportunities, ed. Antonacopoulos & Hu, Word Scientific Publishing</i>. <font size=-1>(Originally published as: William W. Cohen, Matthew Hurst & Lee S. Jensen (2002): <a href="http://www2002.org/CDROM/refereed/355/index.html">A Flexible Learning System for Wrapping Tables and Lists in HTML Documents</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/www/www2002.html#CohenHJ02">WWW 2002: 232-241</a>; Lee S. Jensen & William W. Cohen (2001): <i>A Structured Wrapper Induction System for Extracting Information from Semi-Structured Documents</i> in <i>Proc. of the IJCAI-2001 Workshop on Adaptive Text Extraction and Mining</i>)</font>.
+<li>William W. Cohen, Matthew Hurst & Lee S. Jensen (2003): <a href="postscript/ws-chap-2002.pdf">A Flexible Learning System for Wrapping Tables and Lists in HTML Documents</a> in <i>Web Document Analysis: Challenges and Opportunities, ed. Antonacopoulos & Hu, Word Scientific Publishing</i>.
+</li>
+<li>William W. Cohen, Matthew Hurst & Lee S. Jensen (2002): <a href="http://www2002.org/CDROM/refereed/355/index.html">A Flexible Learning System for Wrapping Tables and Lists in HTML Documents</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/www/www2002.html#CohenHJ02">WWW 2002: 232-241</a>.
 </li>
 <li>William W. Cohen, David McAllester, and Henry Kautz (2000): <a href="postscript/kdd-2000.ps">Hardening Soft Information Sources</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/kdd/kdd2000.html#CohenKM00">KDD 2000: 255-259</a>.
 </li>
-<li>William W. Cohen (1998): <i>Hardness Results for Learning First-Order Representations and Programming by Demonstration</i> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/ml/ml30.html#Cohen98">Machine Learning 30(1): 57-87 (1998)</a>. <font size=-1>(Originally published as: William W. Cohen (1996): <a href="postscript/colt-96.ps">The Dual DFA Learning Problem: Hardness Results for Programming by Demonstration and Learning First-Order Representations (Extended Abstract)</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/colt/colt1996.html#Cohen96">COLT 1996: 29-40</a>)</font>.
+<li>William W. Cohen (1998): <i>Hardness Results for Learning First-Order Representations and Programming by Demonstration</i> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/ml/ml30.html#Cohen98">Machine Learning 30(1): 57-87 (1998)</a>.
+</li>
+<li>William W. Cohen (1996): <a href="postscript/colt-96.ps">The Dual DFA Learning Problem: Hardness Results for Programming by Demonstration and Learning First-Order Representations (Extended Abstract)</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/colt/colt1996.html#Cohen96">COLT 1996: 29-40</a>.
 </li>
 <li>William W. Cohen (1995): <i>Pac-learning non-recursive prolog clauses</i> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/ai/ai79.html#Cohen95">Artif. Intell. 79(1): 1-38 (1995)</a>.
 </li>
@@ -25,7 +29,9 @@
 </li>
 <li>William W. Cohen and Haym Hirsh (1994): <a href="postscript/kr-94.ps">Learning the CLASSIC description logic: Theoretical and experimental results</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/kr/kr94.html#CohenH94">KR 1994: 121-133</a>.
 </li>
-<li>William W. Cohen and Haym Hirsh (1994): <i>Learnability of description logics with equality constraints</i> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/ml/ml17.html#CohenH94">Machine Learning 17(2-3): 169-199 (1994)</a>. <font size=-1>(Originally published as: William W. Cohen and Haym Hirsh (1992): <i>Learnability of Description Logics</i> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/colt/colt1992.html#CohenH92">COLT 1992: 116-127</a>)</font>.
+<li>William W. Cohen and Haym Hirsh (1994): <i>Learnability of description logics with equality constraints</i> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/ml/ml17.html#CohenH94">Machine Learning 17(2-3): 169-199 (1994)</a>.
+</li>
+<li>William W. Cohen (1994): <a href="postscript/aaai-94-rc.ps">Recovering Software Specifications with Inductive Logic Programming</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/aaai/aaai94-1.html#Cohen94">AAAI 1994: 142-148</a>.
 </li>
 <li>William W. Cohen, Russell Greiner, and Dale Schuurmans (1994): <i>Probabilistic hill-climbing</i> in <i>Computational learning theory and natural learning systems (Volume II), MIT Press.</i>.
 </li>
@@ -34,6 +40,8 @@
 <li>William W. Cohen (1993): <a href="postscript/aaai-93-cryptlim.ps">Cryptographic limitations on learning one-clause logic programs</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/aaai/aaai93.html#Cohen93">AAAI 1993: 80-85</a>.
 </li>
 <li>William W. Cohen (1993): <a href="postscript/aaai-93-force2.ps">Pac-learning a restricted class of recursive logic programs</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/aaai/aaai93.html#Cohen93a">AAAI 1993: 86-92</a>.
+</li>
+<li>William W. Cohen and Haym Hirsh (1992): <i>Learnability of Description Logics</i> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/colt/colt1992.html#CohenH92">COLT 1992: 116-127</a>.
 </li>
 <li>William W. Cohen, Alex Borgida, and Haym Hirsh (1992): <i>Computing least common subsumers in description logics</i> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/aaai/aaai92.html#CohenBH92">AAAI 1992: 754-760</a>.
 </li>
