--- a/pubs-m.html
+++ b/pubs-m.html
@@ -9,7 +9,11 @@
 </li>
 <li>Jay Pujara, Hui Miao, Lise Getoor and William W. Cohen (2014): <a href="postscript/aimag-2014.pdf">Using Semantics & Statistics to Turn Data into Knowledge</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/aim/PujaraMGC15">AI Magazine 2014</a>.
 </li>
-<li>William Yang Wang, Kathryn Mazaitis, William W. Cohen (2013): <a href="postscript/cikm-2013-proppr.pdf">Programming with Personalized PageRank: A Locally Groundable First-Order Probabilistic Logic</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/abs-1305-2254">CIKM-2013</a> <b>(Honorable Mention for Best Paper at CIKM-2013)</b>. <font size=-1>(Originally published as: William Yang Wang, Kathryn Mazaitis, William W. Cohen (2013): <a href="http://arxiv.org/abs/1305.2254">Programming with Personalized PageRank: A Locally Groundable First-Order Probabilistic Logic</a> in <a href="http://doi.acm.org/10.1145/2505515.2505573">arxiv 1305.2254</a>; William Yang Wang, Kathryn Mazaitis, William W. Cohen (2013): <i>Programming with Personalized PageRank: A Locally Groundable First-Order Probabilistic Logic</i> in <a href="recent.html">ICML 2103 Workshop on Inferning</a>)</font>.
+<li>William Yang Wang, Kathryn Mazaitis, William W. Cohen (2013): <a href="postscript/cikm-2013-proppr.pdf">Programming with Personalized PageRank: A Locally Groundable First-Order Probabilistic Logic</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/abs-1305-2254">CIKM-2013</a> <b>(Honorable Mention for Best Paper at CIKM-2013)</b>.
+</li>
+<li>William Yang Wang, Kathryn Mazaitis, William W. Cohen (2013): <a href="http://arxiv.org/abs/1305.2254">Programming with Personalized PageRank: A Locally Groundable First-Order Probabilistic Logic</a> in <a href="http://doi.acm.org/10.1145/2505515.2505573">arxiv 1305.2254</a>.
+</li>
+<li>William Yang Wang, Kathryn Mazaitis, William W. Cohen (2013): <i>Programming with Personalized PageRank: A Locally Groundable First-Order Probabilistic Logic</i> in <a href="recent.html">ICML 2103 Workshop on Inferning</a>.
 </li>
 <li>Einat Minkov and William W. Cohen (2010): <a href="postscript/tois-ghirl.pdf">Improving Graph-Walk Based Similarity with Reranking: Case Studies for Personal Information Management</a> in <a href="http://doi.acm.org/10.1145/1877766.1877770">TOIS-2010</a>.
 </li>
@@ -45,13 +49,15 @@
 </li>
 <li>William W. Cohen & Jacob Richman (2001): <i>Learning to Match and Cluster Entity Names</i> in <i>Proc. of the ACM SIGIR-2001 Workshop on Mathematical/Formal Methods in IR</i>.
 </li>
-<li>Chumki Basu, Haym Hirsh, William W. Cohen & Craig Neville-Manning (2001): <a href="http://www.cs.washington.edu/research/jair/abstracts/basu01a.html">Technical Paper Recommendation: A Study in Combining Multiple Information Sources</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/jair/jair14.html#BasuHCN01">J. Artif. Intell. Res. (JAIR) 14: 231-252 (2001)</a>. <font size=-1>(Originally published as: Chumki Basu, Haym Hirsh, William W. Cohen (1998): <a href="postscript/aaai-98-collab.ps">Recommendation as Classification: Using Social and Content-Based Information in Recommendation.</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/aaai/aaai98.html#BasuHC98">AAAI/IAAI 1998: 714-720</a>)</font>.
+<li>Chumki Basu, Haym Hirsh, William W. Cohen & Craig Neville-Manning (2001): <a href="http://www.cs.washington.edu/research/jair/abstracts/basu01a.html">Technical Paper Recommendation: A Study in Combining Multiple Information Sources</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/jair/jair14.html#BasuHCN01">J. Artif. Intell. Res. (JAIR) 14: 231-252 (2001)</a>.
 </li>
 <li>William W. Cohen, David McAllester, and Henry Kautz (2000): <a href="postscript/kdd-2000.ps">Hardening Soft Information Sources</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/kdd/kdd2000.html#CohenKM00">KDD 2000: 255-259</a>.
 </li>
-<li>William W. Cohen and Wei Fan (2000): <a href="http://www9.org/w9cdrom/266/266.html">Web-Collaborative Filtering: Recommending Music by Crawling The Web</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/cn/cn33.html#CohenF00">Computer Networks 33(1-6): 685-698 (2000)</a>. <font size=-1>(Originally published as: William W. Cohen and Wei Fan (2000): <a href="http://www9.org/w9cdrom/266/266.html">Web-Collaborative Filtering: Recommending Music by Crawling The Web</a> in <i>WWW 2000</i>)</font>.
+<li>William W. Cohen and Wei Fan (2000): <a href="http://www9.org/w9cdrom/266/266.html">Web-Collaborative Filtering: Recommending Music by Crawling The Web</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/cn/cn33.html#CohenF00">Computer Networks 33(1-6): 685-698 (2000)</a>.
 </li>
-<li>William W. Cohen (2000): <a href="postscript/tois-whirl.pdf">Data Integration using Similarity Joins and a Word-based Information Representation Language</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/tois/tois18.html#Cohen00">ACM Trans. Inf. Syst. 18(3): 288-321 (2000)</a>. <font size=-1>(Originally published as: William W. Cohen (1998): <a href="postscript/sigmod-98.ps">Integration of Heterogeneous Databases Without Common Domains Using Queries Based on Textual Similarity</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/sigmod/sigmod98.html#Cohen98">SIGMOD Conference 1998: 201-212</a> <b>(Won Ten-Year "Test of Time" Award at SIGMOD 2008)</b>; William W. Cohen (1997): <a href="postscript/sigir-ws-97.ps">Knowledge Integration for Structured Information Sources Containing Text (Extended Abstract)</a> in <i>SIGIR Workshop on Networked IR (informal proceedings)</i>)</font>.
+<li>William W. Cohen and Wei Fan (2000): <a href="http://www9.org/w9cdrom/266/266.html">Web-Collaborative Filtering: Recommending Music by Crawling The Web</a> in <i>WWW 2000</i>.
+</li>
+<li>William W. Cohen (2000): <a href="postscript/tois-whirl.pdf">Data Integration using Similarity Joins and a Word-based Information Representation Language</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/tois/tois18.html#Cohen00">ACM Trans. Inf. Syst. 18(3): 288-321 (2000)</a>.
 </li>
 <li>William W. Cohen (1999): <i>What Can We Learn from the Web</i> in <i>ICML 1999</i>.
 </li>
@@ -59,7 +65,9 @@
 </li>
 <li>William W. Cohen (2000): <a href="postscript/aij-whirl-overview.ps">WHIRL: A Word-based Information Representation Language</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/ai/ai118.html#Cohen00">Artif. Intell. 118(1-2): 163-196 (2000)</a>.
 </li>
-<li>William W. Cohen and Wei Fan (1999): <a href="http://www8.org/w8-papers/5a-search-query/learning/index.html">Learning Page-Independent Heuristics for Extracting Data from Web Pages</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/cn/cn31.html#CohenF99">Computer Networks 31(11-16): 1641-1652 (1999)</a>. <font size=-1>(Originally published as: William W. Cohen and Wei Fan (1999): <a href="http://www8.org/w8-papers/5a-search-query/learning/index.html">Learning Page-Independent Heuristics for Extracting Data from Web Pages</a> in <i>WWW 1999</i>)</font>.
+<li>William W. Cohen and Wei Fan (1999): <a href="http://www8.org/w8-papers/5a-search-query/learning/index.html">Learning Page-Independent Heuristics for Extracting Data from Web Pages</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/cn/cn31.html#CohenF99">Computer Networks 31(11-16): 1641-1652 (1999)</a>.
+</li>
+<li>William W. Cohen and Wei Fan (1999): <a href="http://www8.org/w8-papers/5a-search-query/learning/index.html">Learning Page-Independent Heuristics for Extracting Data from Web Pages</a> in <i>WWW 1999</i>.
 </li>
 <li>William W. Cohen (1999): <a href="postscript/jnl-agents.ps.gz">Reasoning about Textual Similarity in a Web-Based Information Access</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/aamas/aamas2.html#Cohen99">Autonomous Agents and Multi-Agent Systems 2(1): 65-86 (1999)</a>.
 </li>
@@ -71,11 +79,15 @@
 </li>
 <li>William W. Cohen & Haym Hirsh (1998): <a href="postscript/kdd-98.ps">Joins that Generalize: Text Classification Using WHIRL</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/kdd/kdd98.html#CohenH98">KDD 1998: 169-173</a>.
 </li>
+<li>William W. Cohen (1998): <a href="postscript/sigmod-98.ps">Integration of Heterogeneous Databases Without Common Domains Using Queries Based on Textual Similarity</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/sigmod/sigmod98.html#Cohen98">SIGMOD Conference 1998: 201-212</a> <b>(Won Ten-Year "Test of Time" Award at SIGMOD 2008)</b>.
+</li>
 <li>William W. Cohen (1998): <i>Providing Database-like Access to the Web Using Queries Based on Textual Similarity (demonstration abstract)</i> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/sigmod/sigmod98.html#Cohen98a">SIGMOD Conference 1998: 558-560</a>.
 </li>
 <li>William W. Cohen (1998): <a href="postscript/agents-98.ps">A Web-based Information System that Reasons with Structured Collections of Text</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/agents/agents98.html#Cohen98">Agents 1998: 400-407</a>.
 </li>
 <li>William W. Cohen (1998): <a href="postscript/aaai-98-ws.ps">The WHIRL Approach to Integration: An Overview</a> in <i>IIWeb 1998 (informal proceedings)</i>.
+</li>
+<li>William W. Cohen (1997): <a href="postscript/sigir-ws-97.ps">Knowledge Integration for Structured Information Sources Containing Text (Extended Abstract)</a> in <i>SIGIR Workshop on Networked IR (informal proceedings)</i>.
 </li>
 </ol>
 <p align="center">[<a href="pubs-s.html">Selected papers</a>| By topic: <a href="pubs-n.html">Deep Learning</a>|  <a href="pubs-x.html">Info Extraction/Reading</a>|  <a href="pubs-l.html">Topic Modeling</a>|  <a href="pubs-g.html">Learning in Graphs</a>|  <a href="pubs-m.html">Matching/Data Integration</a>|  <a href="pubs-t.html">Text Categorization</a>|  <a href="pubs-r.html">Rule Learning</a>|  <a href="pubs-e.html">Explanation-Based Learning</a>|  <a href="pubs-f.html">Formal Results</a>|  <a href="pubs-i.html">Inductive Logic Programming</a>|  <a href="pubs-c.html">Collaborative Filtering</a>|  <a href="pubs-a.html">Applications</a>|  <a href="pubs-d.html">Intelligent Tutoring</a>|  <a href="pubs-G.html">GNAT System</a>|  By year: <a href="pubs.html">All papers</a>]</p>
