added akbc talk

--- a/index.html
+++ b/index.html
@@ -134,13 +134,6 @@ I moved from CMU to Google.  I am leading a new research
 group in AI/ML that is located in Pittsburgh in Google's Bakery
 Square location.  And case you're wondering - <a href="https://careers.google.com/jobs#!t=jo&jid=/google/research-scientist-machine-learning-and-6425-penn-ave-pittsburgh-pa-15206-usa-4037100016&">yes, we are hiring!</a>
 
-<p>
-
-<li><b>I'll be an invited speaker at KR-2018</b> - that's
-the <a href="http://reasoning.eas.asu.edu/kr2018/">16th International
-Conference on Principles of Knowledge Representation and Reasoning</a>
-to be held in Tempe, Arizona (USA) on October 30-November 2, 2018.
-</ul>
 
 <!-- 
 
@@ -399,6 +392,9 @@ more WHIRL-format entity name matching problems.
 
 <p>
 <ul>
+
+<li><a href="https://www.youtube.com/watch?v=JsB4T35We0w">Video for an invited talk, KR for KBQA and KBC<a>  given at AKBC, June 2020.
+(This is the whole first day of the conference, my talk starts about 17:42, after the opening remarks.)
 
 <li><a href="kr-2018.pptx">An invited talk </a> given at
 the <a href="http://ilp2018.unife.it/">The 16th International
